--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Tu nombre Freelancer</h1>
+        <h1>Miguel Angel Freelancer</h1>
     </header>
    
     <nav>
@@ -55,7 +55,7 @@
     </section>
     
     <footer>
-        <p>Todos los derechos reservados</p>
+        <p>Todos los derechos reservados Miguel Angel</p>
     </footer>
     
 </body>
