Actualizacion de h1 en index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Tu nombre Freelancer</h1>
+        <h1>Miguel Angel Freelancer</h1>
     </header>
    
     <nav>
@@ -100,7 +100,7 @@
 
         <form action="">
             <fieldset>
-                <legend>Contactanos lleando todos los campos</legend>
+                <legend>Contactanos llenando todos los campos</legend>
 
                 <div>
                     <label for="">Nombre</label>
@@ -131,7 +131,7 @@
     </section>
     
     <footer>
-        <p>Todos los derechos reservados</p>
+        <p>Todos los derechos reservados | Miguel Angel</p>
     </footer>
     
 </body>
