Actualizaicon index apellidos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Miguel Angel Freelancer</h1>
+        <h1>Miguel Angel Leal Beltran Freelancer</h1>
     </header>
    
     <nav>
