--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Diseñador Freelancer</title>
 </head>
 <body>
     <header>
-        <h1>Miguel Angel Leal Beltran Freelancer</h1>
+        <h1>Miguel Angel Leal Beltran <span>Freelancer</span></h1>
     </header>
    
     <nav>
