Ingreso de lineas en css adicionando speudo elementos root custmoe properties

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Miguel Angel Leal Beltran <span>Freelancer</span></h1>
+        <h1 class="titulo">Miguel Angel Leal Beltran <span>Freelancer</span></h1>
     </header>
    
     <nav>
