--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Miguel Angel Leal Beltran <span>Freelancer</span></h1>
+        <h1 class="titulo">Miguel Angel Leal Beltran Generando codigo <span>Freelancer</span></h1>
     </header>
    
     <nav>
