--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     <header>
         <h1 class="titulo">Miguel Angel Leal Beltran Generando codigo <span>Freelancer</span></h1>
     </header>
-   
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Sobre Mi</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
+   <div class="nav-bg">
+        <nav class="navegacion-principal contenedor">
+            <a href="#">Inicio</a>
+            <a href="#">Sobre Mi</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
 
 
 
